--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c)
 build_tool(csv-head		src/head.c)
-build_tool(csv-ls		src/ls.c)
+build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
 build_tool(csv-replace		src/replace.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
 build_tool(csv-rpn-filter	src/rpn-filter.c)
