--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,7 @@ endif()
 if(LIBPROCPS_FOUND)
 	build_tool(csv-ps src/ps.c src/usr-grp-query.c)
 	if (LIBPROCPS_INCLUDE_DIRS)
-		target_include_directories(csv-ps ${LIBPROCPS_INCLUDE_DIRS})
+		target_include_directories(csv-ps PRIVATE ${LIBPROCPS_INCLUDE_DIRS})
 	endif()
 	target_link_libraries(csv-ps ${LIBPROCPS_LIBRARIES})
 endif()
