--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install deps
-      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev
+      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev
     - name: mkdir
       run: mkdir build
     - name: cmake
