add new tools: min, max, avg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ function(build_tool name)
 		DESTINATION ${CMAKE_INSTALL_BINDIR}/)
 endfunction()
 
+build_tool(csv-avg		src/avg.c src/int-agg.c)
 build_tool(csv-cat		src/cat.c)
 build_tool(csv-concat		src/concat.c)
 build_tool(csv-count		src/count.c)
@@ -123,13 +124,15 @@ build_tool(csv-grep		src/grep.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
+build_tool(csv-min		src/min.c src/int-agg.c)
+build_tool(csv-max		src/max.c src/int-agg.c)
 build_tool(csv-replace		src/replace.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
 build_tool(csv-rpn-filter	src/rpn-filter.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-split		src/split.c)
 build_tool(csv-substring	src/substring.c)
-build_tool(csv-sum		src/sum.c)
+build_tool(csv-sum		src/sum.c src/int-agg.c)
 build_tool(csv-tac		src/tac.c)
 build_tool(csv-tail		src/tail.c)
 build_tool(csv-users		src/users.c src/usr-grp.c)
