actions: run apt update before installing packages
Otherwise apt install may fail like this:

(...)
Err:8 http://security.ubuntu.com/ubuntu bionic-updates/main amd64 libsqlite3-dev amd64 3.22.0-1ubuntu0.1
  404  Not Found [IP: 52.177.174.250 80]
E: Failed to fetch http://security.ubuntu.com/ubuntu/pool/main/s/sqlite3/libsqlite3-dev_3.22.0-1ubuntu0.1_amd64.deb  404  Not Found [IP: 52.177.174.250 80]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: update package lists
+      run: sudo apt update
     - name: install deps
       run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev
     - name: mkdir
