--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - name: update package lists
       run: sudo apt update
     - name: install deps
-      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev
+      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev tmux
     - name: mkdir
       run: mkdir build
     - name: cmake
@@ -20,4 +20,4 @@ jobs:
     - name: make
       run: cd build && make
     - name: ctest
-      run: cd build && ctest --output-on-failure
+      run: cd build && ctest --output-on-failure --timeout 60
