--- a/.github/workflows/buildlite.yml
+++ b/.github/workflows/buildlite.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: remove optional deps
-      run: sudo apt remove flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev
+      run: sudo apt remove flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev tmux
     - name: mkdir
       run: mkdir build
     - name: cmake
@@ -18,4 +18,4 @@ jobs:
     - name: make
       run: cd build && make
     - name: ctest
-      run: cd build && ctest --output-on-failure
+      run: cd build && ctest --output-on-failure --timeout 60
