--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
     - name: update package lists
       run: sudo apt update
     - name: install deps
-      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev curl
+      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev tmux
     - name: mkdir
       run: mkdir build
     - name: cmake
@@ -20,7 +20,7 @@ jobs:
     - name: make
       run: cd build && make
     - name: ctest
-      run: cd build && ctest --output-on-failure
+      run: cd build && ctest --output-on-failure --timeout 60
     - name: upload
       uses: codecov/codecov-action@v1
       with:
